<resources>

    <!-- App info -->
    <string name="app_name">Slate</string>
    <string name="app_version">Version 1.0.0</string>

    <!-- Top app bar -->
    <string name="lock">Lock</string>
    <string name="about">About</string>

    <!-- Add text -->
    <string name="add_text">Add text</string>
    <string name="whats_happening">Whats happening?</string>

    <!-- Delete text -->
    <string name="delete_text">Delete text?</string>
    <string name="delete_message">Text will be permanently deleted from your device</string>

    <!-- Pin -->
    <string name="pin">pin</string>
    <string name="set_pin">Set Pin</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="current_pin">Current Pin</string>
    <string name="confirm_pin">confirm pin</string>
    <string name="disable_pin">Disable Pin</string>

    <!-- Buttons text -->
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="save">Save</string>

    <!-- Icons description -->
    <string name="lock_icon">Lock icon</string>
    <string name="app_icon">App icon</string>

    <!-- Dialogs -->
    <string name="nothing_to_show">Nothing to show</string>
    <string name="return_to_top">Return to Top</string>

</resources>